--- a/styles/Overall.module.css
+++ b/styles/Overall.module.css
@@ -5,6 +5,13 @@
     position: absolute;
 }
 
+.headings{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 50px;
+}
+
 .head{
     text-align: center;
     margin-top: 50px;
