About Section Clear

--- a/styles/Create.module.css
+++ b/styles/Create.module.css
@@ -19,7 +19,7 @@
     align-items: center;
     height: fit-content;
     width: 50%;
-    background-color: antiquewhite;
+    background-color: #91b4fa;
     border: 2px solid #75A4FF;
     border-radius: 14px;
 }
