--- a/styles/AboutScreen.module.css
+++ b/styles/AboutScreen.module.css
@@ -1,5 +1,5 @@
 .head{
-    margin-top: 7%;
+    margin-top: 5%;
 }
 
 .bi{
@@ -14,8 +14,18 @@
 }
 
 .cards{
-    margin-top: 7%;
+    margin-top: 5%;
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+.cards .card{
+    transition: 0.7s;
+}
+
+.cards .card:hover{
+    transform: scale(1.05);
+    box-shadow: 5px 10px 10px #3f7efd;
+    background-color: #75A4FF;
 }
