--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -123,3 +123,46 @@
   font-size: 1.2rem;
   letter-spacing: 0.1em;
 }
+
+@media only screen and (max-width: 768px) {
+  .HeaderTop {
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0em 3em 0em 3em;
+    background-color: #fff;
+    border-bottom: 3px solid #75a4ff;
+    border-left: 3px solid #75a4ff;
+    border-right: 3px solid #75a4ff;
+    border-radius: 0px 0px 7px 7px;
+  }
+
+  .HeaderTop img {
+    height: 20px;
+  }
+
+  .logindiv {
+    background-color: white;
+    margin-top: 70px;
+    height: 350px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border-top: 3px solid #75a4ff;
+    border-bottom: 3px solid #75a4ff;
+    border-left: 3px solid #75a4ff;
+    border-right: 3px solid #75a4ff;
+    border-radius: 7px 7px 7px 7px;
+  }
+
+  .vector{
+    height: 120px;
+  }
+
+  .vector2{
+    height: 100px;
+  }
+}
