--- a/styles/HomeScreen.module.css
+++ b/styles/HomeScreen.module.css
@@ -95,3 +95,71 @@
   margin-top: 20px;
   height: 50px;
 }
+
+
+@media only screen and (max-width: 768px) { 
+  .NavBar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* margin: 0em 1em 0em 1em; */
+    background-color: #fff;
+    border-bottom: 3px solid #75a4ff;
+    border-left: 3px solid #75a4ff;
+    border-right: 3px solid #75a4ff;
+    border-radius: 0px 0px 7px 7px;
+  }
+
+  .NavBar .options a {
+    margin: 0px 7px 0px 7px;
+    color: black;
+    font-size: 1.2rem;
+    /* letter-spacing: 0.1em; */
+    transition: 0.7s;
+    border-radius: 14px;
+  }
+
+  .NavBar img{
+    height: 20px;
+  }
+
+  .vector{
+    height: 100px;
+  }
+
+  .vector2{
+    height: 100px;
+  }
+
+  .body {
+    height: 250px;
+    width: 80%;
+    margin-top: 180px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  .body .box {
+    background-color: white;
+    cursor: pointer;
+    display: block;
+    margin: 50px 0px 0px;
+    border: 3px #75a4ff solid;
+    padding: 15px;
+    border-radius: 14px;
+    height: 85%;
+    width: 300px;
+    transition: 0.7s;
+  }
+
+  .body .box h1{
+    font-size: 1.2rem;
+  }
+
+  .body .box img{
+    height: 20px;
+  }
+}
