--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -124,6 +124,45 @@
   letter-spacing: 0.1em;
 }
 
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 470px;
+  color: white;
+  padding: 50px;
+  width: fit-content;
+  background-color: #75a4ff;
+  z-index: 111;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 14px;
+  box-shadow: 10px 50px 50px #3575f7;
+}
+
+.info i{
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 2px;
+  font-size: 30px;
+}
+
+.info .infotext{
+  text-align: center;
+}
+
+.info .infotext h1{
+  font-size: 2.2rem;
+}
+
+.info .infotip{
+  text-align: center;
+}
+
 @media only screen and (max-width: 768px) {
   .HeaderTop {
     height: 100px;
