--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -164,6 +164,48 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 500px;
+    width: 70%;
+    color: white;
+    padding: 20px;
+    width: fit-content;
+    background-color: #75a4ff;
+    z-index: 111;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 14px;
+    box-shadow: 10px 50px 50px #3575f7;
+  }
+  .info img{
+    height: 50px;
+  }
+  .info i{
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 2px;
+    font-size: 30px;
+  }
+  
+  .info .infotext{
+    width: 90%;
+    text-align: center;
+  }
+  
+  .info .infotext h1{
+    font-size: 1.5rem;
+  }
+  
+  .info .infotip{
+    text-align: center;
+  }
   .HeaderTop {
     height: 100px;
     display: flex;
